--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aaame-lawn-snow",
+  "name": "lucid-tech-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.3",
-    "react-helmet-async": "^2.0.4"
+    "framer-motion": "^11.0.8",
+    "sonner": "^1.4.3",
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
